resources/style.css
/*
Title-font-family: 'Amatic SC', cursive;
Heading-font-family: 'Josefin Slab', serif;
Body-font-family: 'Roboto', sans-serif;

Peach - rgba(247, 219, 167)
Tumbleweed - rgba(241, 171, 134)
Copper Crayola - rgba(197, 123, 87)
Black Olive - rgba(53, 53, 49)
Dark Sienna - rgba(60, 21, 24)
*/

@viewport {
    width: device-width ;
    zoom: 1.0 ;
}

html {
    font-size: 16px;
}

body {
    margin: 0px;
    font-family: 'Roboto', sans-serif;
    text-align: center;
}

h1 {
    font-family: 'Amatic SC', cursive;
    color: rgba(60, 21, 24);
    font-size: 2rem;
}

h2, h3 {
    font-family: 'Josefin Slab', serif;
    color: rgba(53, 53, 49);
}

h2 {
    font-size: 1.5rem;
}

h3 {
    font-size: 1.25rem;
}

a {
    text-decoration: none;
    color: black;
}

header {
    position: fixed;
    height: 15vh;
    width: 100%;
    display: flex;
    align-items: center;
    background-color: rgba(241, 171, 134);
    border-bottom: rgba(197, 123, 87) 3px solid;
}

.fa {
    color: rgba(60, 21, 24);
}

#logo {
    display: inline-flex;
    width: 50%;
    align-items: center;
}

nav {
    display: flex;
    width: 50%;
    justify-content: flex-end;
}

nav i {
    cursor: pointer;
}

.dropbtn {
    border: none;
    background-color:rgba(241, 171, 134);
    padding: 16px;
    width: 50vw;
    outline: none;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: rgba(241, 171, 134);
    min-width: 100%;
    z-index: 1;
    border-left:  rgba(197, 123, 87) 3px solid;
    height: 90vh;
    margin-top: -50%;
    
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    height: 14vh;
    display: flex;
    align-items: center;
    border-bottom:  rgba(197, 123, 87) 1px dashed;
    font-size: 1.2rem;
}

.show {
    display: flex;
    flex-direction: column;
    align-content: space-between;
    
}

#map {
    border-bottom: rgba(60, 21, 24) 1px solid;
    padding-top: 15vh;
}

/*Home Page*/
.favorite {
    max-width: 1000px;
    position: relative;
    margin: auto;
}

.mySlides {
    width: 100%;
    display: none;
}

.mySlides img {
    border: rgba(53, 53, 49) 2px solid;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 45%;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: grey;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

.next {
    right: 5%;
    border-radius: 3px 0 0 3px;
}

.prev {
    left: 5%;
    border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover {
    background-color: rgba(60, 21, 24, 0.8);
}

/*Recipe Index*/
.category {
    border-bottom: rgba(197, 123, 87) 1px solid;
    padding: 2%;
}

.category h3 {
    margin-bottom: 1%;
}

.cat-listing {
    background-color: rgba(247, 219, 167, 0.6);
    border: rgba(60, 21, 24) 1px solid;
    border-radius: 15px;
}

.cat-listing p {
    line-height: 2rem;
}

.cat-listing a {
    padding: 2%;
}

/*Mobile*/
@media only screen and (min-width: 0px) and (max-width: 500px)
{
    
}

/*Desktop*/
@media only screen and (min-width: 800px) 
{
    
}

